rust/verified-anchor-macros/tests/ui/bare_u8.rs
use verified_anchor::VerifiedAccounts;

#[derive(VerifiedAccounts)]
struct OldStyle {
    vault: u8,
}

fn main() {}
